Bug 322404 - DAV resource syncs calendar components even though they are not advertised by the server.
Summary: DAV resource syncs calendar components even though they are not advertised by...
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: DAV Resource (other bugs)
Version First Reported In: 4.10
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-15 17:59 UTC by Alexander Maret-Huskinson
Modified: 2014-08-30 10:20 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Maret-Huskinson 2013-07-15 17:59:23 UTC
Since KDE 4.10.5 I'm no longer able to sync my Zarafa caldav calendar because Akonadi tries to sync calendar components even though they are not advertised by the CALDAV:supported-calendar-component-set property. 

This becomes a problem because Akonadi seems to abort the whole sync process if an error occurs while trying to sync any of the calendar components. Therefore the VEVENT calendar will not be synced even though the error occurs when trying to sync the unsupported VJOURNAL component.

The problem only occurs because Zarafa also has a bug which triggers an internal server error when trying to sync the unsupported calendar component VJOURNAL. The server however correctly advertises only the VEVENT and VTODO components, so KDE should either not try to sync the VJOURNAL component at all or ignore any errors which are triggered when trying to query components which were not advertised by the server.



Reproducible: Always

Steps to Reproduce:
1. Add a Zarafa  7.1.2-39121 caldav resource.
2. Sync the calendar.
Actual Results:  
The calendar sync is aborted.

Expected Results:  
The calendar should be synced successfully.

Tested with:
- OpenSuse 12.3 + KDE 4.10.5 
- Kubuntu 12.04 + KDE 4.10.5
Comment 1 Alex Hermann 2013-08-22 13:30:11 UTC
This regression has been introduced in commit cfe87345ad5d96d3abf30fd15169649cc0be2bcc


https://projects.kde.org/projects/kde/kdepim-runtime/repository/revisions/cfe87345ad5d96d3abf30fd15169649cc0be2bcc
Comment 2 Kai Danielmeier 2014-01-23 11:12:04 UTC
The bug is still present in 4.12

Just reproduced against zarafa 7.1.17
Comment 3 Grégory Oestreicher 2014-08-30 10:17:53 UTC
Git commit 677828deb19a6927f67a3cd3ba4b66c493beda14 by Grégory Oestreicher.
Committed on 29/08/2014 at 20:02.
Pushed by goestreicher into branch 'dav-fix-4.13'.

Limit the items types requested

M  +22   -14   resources/dav/common/davitemslistjob.cpp
M  +11   -0    resources/dav/common/davitemslistjob.h
M  +1    -0    resources/dav/resource/davgroupwareresource.cpp

http://commits.kde.org/kdepim-runtime/677828deb19a6927f67a3cd3ba4b66c493beda14
Comment 4 Grégory Oestreicher 2014-08-30 10:17:56 UTC
Git commit 57cedb3313897f3baeeadf963dd74a1e1530df59 by Grégory Oestreicher.
Committed on 29/08/2014 at 20:02.
Pushed by goestreicher into branch 'dav-fix-4.14'.

Limit the items types requested

M  +22   -14   resources/dav/common/davitemslistjob.cpp
M  +11   -0    resources/dav/common/davitemslistjob.h
M  +1    -0    resources/dav/resource/davgroupwareresource.cpp

http://commits.kde.org/kdepim-runtime/57cedb3313897f3baeeadf963dd74a1e1530df59
Comment 5 Grégory Oestreicher 2014-08-30 10:20:19 UTC
Git commit 10f9541eb670832f279b0ada27522ec4ba7c2275 by Grégory Oestreicher.
Committed on 29/08/2014 at 20:02.
Pushed by goestreicher into branch 'KDE/4.14'.

Limit the items types requested
FIXED-IN: 4.14.1

M  +22   -14   resources/dav/common/davitemslistjob.cpp
M  +11   -0    resources/dav/common/davitemslistjob.h
M  +1    -0    resources/dav/resource/davgroupwareresource.cpp

http://commits.kde.org/kdepim-runtime/10f9541eb670832f279b0ada27522ec4ba7c2275