Limit the items types requested

BUG: 322404
FIXED-IN: 4.14.1